networking/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-one
  namespace: default
spec:
  rules:
  - host: www.external.com
    http:
      paths:
      - backend:
          service:
            name: nginx-two
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: metacubez.io
    http:
      paths:
      - backend:
          service:
            name: apache-two
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
